Adding mobile/desktop.css refs and section ids to all html files

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
                 <h1>Cantor College</h1>
             </div>
             <ul class="nav-links">
-                <li><a href="index.html">Cantor College Homepage</a></li>
-                <li><a href="courses.html"> List of Courses</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="courses.html">Courses</a></li>
                 <li><a href="facilities.html">Facilities</a></li>
                 <li><a href="resources.html">Learning Resources</a></li>
-                <li><a href="staff-info.html">Information for Staff</a></li>
-                <li><a href="student-info.html">Information for Students</a></li>
+                <li><a href="staff-info.html">Staff</a></li>
+                <li><a href="student-info.html">Students</a></li>
                 <li><a href="business.html">Working with Business</a></li>
-                <li><a href="contact-us.html">Contact us</a></li>
+                <li><a href="contact-us.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
