--- a/facilities.html
+++ b/facilities.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="logo">
-                <h1>Our Facilities</h1>
+                <h1>Facilities</h1>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
