--- a/resources.html
+++ b/resources.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="logo">
-                <h1>Cantor College</h1>
+                <h1>Learning Resources</h1>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
@@ -27,9 +27,9 @@
     </header>
 
     <section id="resources" class="resources">
-        <h2>Learning Resources</h2>
+        <h2>Guidelines</h2>
         <div class="resource-content">
-            <h3>Rules Governing the Use of the Library and Resource Centre</h3>
+            <h3>Rules for Governing the Use of the Library and Resource Centre</h3>
             <h4>Introduction</h4>
             <p>All students and staff of the College are entitled to register as members of the Library and Resource Centre and to use the facilities for the purpose of their course of study or College employment.</p>
             <p>Membership may also be extended to other individuals and to persons nominated from other organisations: a fee is usually charged. Access to the Library and Resource Centre for study purposes may be made available to non-members by arrangement. Details are available in the External Services leaflet.</p>
