--- a/staff-info.html
+++ b/staff-info.html
@@ -28,9 +28,9 @@
     </header>
     <section id="staff-info" class="staff-info">
         <div class="staff-info">
-            <h2>Information for Staff</h2>
+            <h2>News:</h2>
             <p>
-                News: Cantor College recently hosted the Software Engineering student of the year awards. Short-listed candidates from around the country attended the one-day event.
+                Cantor College recently hosted the Software Engineering student of the year awards. Short-listed candidates from around the country attended the one-day event.
             </p>
             <ul>
                 <li>For academic regulations, assessment, awards, student records, and course validation.</li>
