--- a/business.html
+++ b/business.html
@@ -27,7 +27,7 @@
         </header>
         <section id="business" class="business">
             <div class="business-content">
-                <h2>Working with Business</h2>
+                <h2>Working with us</h2>
                 <p>
                     Partner with Cantor College: Unlock Expertise, Innovation, and Growth
                     At Cantor College, we believe in the power of collaboration between education and industry. Our College offers a range of specialized services designed to support businesses in achieving their goals through cutting-edge expertise, innovation, and tailored solutions. With a focus on Computing, Design, and Technology, we are uniquely positioned to help your business thrive in an increasingly digital world.
@@ -59,6 +59,9 @@
                     </section>
                 </nav>
             </header>
+            <footer>
+                <p>2024 Cantor College. All rights reserved.</p>
+            </footer>
         </body>
     </html>
 
