--- a/contact-us.html
+++ b/contact-us.html
@@ -49,5 +49,8 @@
             </div>
         </nav>
     </header>
+    <footer>
+        <p>2024 Cantor College. All rights reserved.</p>
+    </footer>
 </body>
 </html>
