--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <div class="logo">
                 <h1>Cantor College</h1>
             </div>
+            <div id="burger-menu">
+                <button id="burger-button">&#9776;</button>
+            </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="courses.html">Courses</a></li>
@@ -29,10 +32,26 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
+        <img src="website-images-assets/IMG_0523.jpeg" alt="Cantor College Background" alt-width="980" height="698" style="width: 980px; height: 698px; object-fit: cover; object-position: 50%;" class="hero-bg">
         <div class="hero-content">
             <h2>Welcome to Cantor College</h2>
             <p>Your future begins here. Explore our diverse range of courses and be part of an inspiring community.</p>
             <a href="admissions" class="cta-button">Apply Now</a>
+        </div>
+    </section>
+
+    <!-- Image Slideshow Section -->
+    <section id="image-rotator" class="image-rotator">
+        <div class="slideshow-container">
+            <div class="slide fade">
+                <img src="website-images-assets/ACES-032-Computing-Playstation-Lab.jpg" style="width:100%">
+            </div>
+            <div class="slide fade">
+                <img src="website-images-assets/Cantor atrium 3.jpg" style="width:100%">
+            </div>
+            <div class="slide fade">
+                <img src="website-images-assets/Cantor atrium 4.jpg" style="width:100%">
+            </div>
         </div>
     </section>
 
@@ -41,7 +60,7 @@
         <h2>About Cantor College</h2>
         <p>
           Cantor College was established in 1989 to specialize in Computing and Design.   
-          At Cantor College, we want to give students the education they need to achieve their career aims, leaving them equipped with the knowledge, skills and experience to succeed. 
+          At Cantor College, we want to give students the education they need to achieve their career aims, leaving them equipped with the knowledge, skills, and experience to succeed. 
           Cantor College gives you the opportunities that can give you the edge when you enter the world of work, through our teaching and our links to some of the world's leading researchers and employers. 
           Our students have gone on to successful careers in a wide range of industries across the globe.  Whatever your ambitions, our learning and support can help to get the most out of your time with Cantor College, 
           both as a student and in your future career.
@@ -57,17 +76,17 @@
                 <p>
                   The College offers a range of courses to suit applicants with varying backgrounds and educational abilities. 
                   At undergraduate level, there are single BSc Honours Degree courses in Computing, Computer Networks, 
-                  Software Engineering and Cyber Security with Forensics amongst others.
+                  Software Engineering, and Cyber Security with Forensics amongst others.
                 </p>
-              <p>
-                The College teaches undergraduate and postgraduate courses in a wide range of specialisms, including computer science, software development, information systems, networking and software engineering. 
-                It is at the heart of a passionate computing community, including student societies devoted to games development, digital forensics and programming.
-              </p>
-              <p>
-                The courses are British Computer Society accredited and are highly relevant to modern industry. 
-                They are designed to prepare students for professional occupations in Computing and related fields. 
-                Many graduates continue their studies to pursue a higher degree such as an MSc. or PhD.
-              </p>
+                <p>
+                  The College teaches undergraduate and postgraduate courses in a wide range of specialisms, including computer science, software development, information systems, networking, and software engineering. 
+                  It is at the heart of a passionate computing community, including student societies devoted to games development, digital forensics, and programming.
+                </p>
+                <p>
+                  The courses are British Computer Society accredited and are highly relevant to modern industry. 
+                  They are designed to prepare students for professional occupations in Computing and related fields. 
+                  Many graduates continue their studies to pursue a higher degree such as an MSc. or PhD.
+                </p>
             </li>
             <li>
                 <h3>Design Courses</h3>
@@ -75,25 +94,32 @@
                   The College is an internationally connected creative community of diverse disciplines housed under one roof. 
                   We shape our students' futures, preparing them to shape the world through applied knowledge and creativity.
                 </p>
-              <p>
-                The College's art and design courses don't just train you, they promote alternative ways of thinking, 
-                making and communicating; they provide you with space, tools and inspiration to develop your creative practice and a clear career path. 
-                You'll get expert teaching from active practitioners and researchers who will encourage you to adopt innovative and resourceful approaches that both perceive and create opportunities for better lives.
-              </p>
-              <p>
-                You’ll develop your creative practice whilst interacting with your peers in well-equipped studios, making and digital workshops. 
-                At the same time, you'll learn professional skills by working on applied briefs facilitated through our links with commercial clients, 
-                cultural institutions, businesses and organisations.
-              </p>
+                <p>
+                  The College's art and design courses don't just train you, they promote alternative ways of thinking, 
+                  making, and communicating; they provide you with space, tools, and inspiration to develop your creative practice and a clear career path. 
+                  You'll get expert teaching from active practitioners and researchers who will encourage you to adopt innovative and resourceful approaches that both perceive and create opportunities for better lives.
+                </p>
+                <p>
+                  You’ll develop your creative practice whilst interacting with your peers in well-equipped studios, making and digital workshops. 
+                  At the same time, you'll learn professional skills by working on applied briefs facilitated through our links with commercial clients, 
+                  cultural institutions, businesses, and organisations.
+                </p>
             </li>
         </ul>
     </section>
 
     <!-- Admissions Section -->
-    <section id="admissions" class="admissions">
-        <h2>Admissions</h2>
-        <p>Join Cantor College today and embark on a journey of learning and growth. Applications are open for the upcoming semester.</p>
-        <a href="#" class="cta-button">Start Your Application</a>
+    <section id="How to find us:" class="How to find us:">
+        <h2>How to find us:</h2>
+        <p>
+          Cantor College
+          Main Street
+          Sheffield
+          SC4 2BB
+          Tel:(01321) 2340 235
+          Fax: (01321) 2340 236
+          Email: info@cantorcollege.ac.uk
+        </p>
     </section>
 
     <!-- Contact Section -->
@@ -117,5 +143,7 @@
     <footer>
         <p>&copy; 2024 Cantor College. All rights reserved.</p>
     </footer>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
