added logo and resized it

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <div class="logo">
-                <h1>Cantor College</h1>
+                <img src="website-images-assets/resized-logo.png" alt="Cantor College Logo">
             </div>
             <div id="burger-menu">
                 <button id="burger-button">&#9776;</button>
