Added logo to all pages

--- a/contact-us.html
+++ b/contact-us.html
@@ -11,6 +11,8 @@
     <header>
         <nav>
             <div class="logo">
+                <img src="website-images-assets/resized-logo.png" alt="Cantor College Logo">
+            </div>
                 <h1>Contact Us</h1>
                 </div>
                 <ul class="nav-links">
