--- a/courses.html
+++ b/courses.html
@@ -11,6 +11,8 @@
     <header role="banner">
         <nav>
             <div class="logo">
+                <img src="website-images-assets/resized-logo.png" alt="Cantor College Logo">
+            </div>
                 <h1>Courses</h1>
             </div>
             <ul class="nav-links">
